Google Playstore Apps.ipynb

--- a/Google Playstore Apps.ipynb
+++ b/Google Playstore Apps.ipynb
@@ -16,8 +16,8 @@
     "2. What are the top 10 most installed apps?\n",
     "3. What are the top downloaded apps in each of these categories?\n",
     "4. What are the top 10 categories in terms of ratings?\n",
-    "5. Do free apps or paid apps have a higher rating?\n",
-    "6. Do ad supported apps or non-ad supported apps have a higher or lower rating?"
+    "5. What apps get higher ratings? Free or paid apps?\n",
+    "6. What apps get higher ratings? Ad supported apps or non-ad supported apps?"
    ]
   },
   {
